scss/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');

.landing {
  background: #151515 url('../images/landing_background.jpg') no-repeat center center;
  background-size: cover;
  background-attachment: fixed;
  height: 100vh;
  min-height: 100vh;
}


.landing::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(28, 28, 30, 0.8);
} 

.other-landing {
  background: #161618;
  background-size: cover;
  background-attachment: fixed;
  background-position: 100% top 100%;
  height: 35vh;
  min-height: 35vh;
}

.navbar {
  z-index: 12;
  background-color: #161618;
}

.navbar-collapse {
  background-color: rgba(22, 22, 24, 0.9);
  transition: background-color 0.3s ease-in-out;
}

.navbar-toggler {
  border: none;
  outline: none;
  box-shadow: none;
}

.navbar-toggler:hover .navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(0, 217, 249, 1)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}

.navbar-toggler:focus,
.navbar-toggler:active {
  border: none;
  outline: none;
  box-shadow: none;
}


.header .text-container {
  z-index: 10;
}

.header .image-container {
  z-index: 10;
}

.logo {
  font-family: "Exo 2", serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
  color: #EDEDED;
}

.nav-item {
  font-family: "Exo 2", serif;
  font-optical-sizing: auto;

}

.nav-link {
  color: #EDEDED;
  transition: color 0.3s ease;
}

.navbar .nav-link:hover {
  color: #00D9F9 !important;
}

.navbar .nav-link:focus, .navbar .nav-link:active {
  color: #FF007A;
}

.text-container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;   
  height: 100%;          
}

.image-container img {
  width: 90%; 
  height: auto;
  max-height: 80vh; 
  object-fit: cover;
}


.about-img {
  width: 200px;
}

.fade-in {
  opacity: 0;
  transition: opacity 2s ease-in-out;
}

.fade-in.visible {
  opacity: 1;
}

.project:hover {
  transform: scale(1.05);
  transition: all 0.5s ease-in-out;
  opacity: 0.8;
}

.features i {
  margin-right: 10px;
}

.btn[disabled] {
  background-color: #d6d6d6 !important;
  color: #8a8a8a !important; 
  border-color: #cccccc !important;   
  opacity: 1;                        
  pointer-events: none;                
  cursor: not-allowed;                
}


input, textarea {
  color: black;
}

input::placeholder, textarea::placeholder {
  color: black !important;
}

footer a i {
  color: #EDEDED; /* Default icon color */
  transition: color 0.3s ease; /* Smooth color transition */
}

footer a i:hover {
  color: #00D9F9; /* Electric Blue on hover */
}

.about-page img {
  max-height: 600px;
}

@media (max-width: 992px) {
  #type-header {
    order: 2; 
  }
  #profile-header {
    order: 1; 
    padding-bottom: 40px;
  }
  #fade-in-text {
      font-size: 1;
  }
  .image-container img {
    max-width: 50%;
  }
  .roles {
    font-size: 0.75rem !important;
  }
}

